--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://asacripanti.github.io/timeTracker",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
